--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="how_much_do_you_love_our_app">How much do you love our app?</string>
     <string name="plz_rate_5_star">If you love this app, please rate 5 stars. Thank you!</string>
     <string name="cd_icon">image icon</string>
+    <string name="don_t_show_again">Don\'t show again</string>
 </resources>
